# llcli_rs

./: Cargo.toml  LICENSE  README.md  flake.nix
integrations/fish/conf.d/: llcli_rs.fish
integrations/fish/functions/: _llcli_rs_gencommand.fish
scripts/: install.sh
scripts/integrations/: install_fish.fish
src/: cli_handler.rs  configuration.rs  default_config.toml  main.rs
src/cli_handler/: api_key.rs  chat.rs  error.rs  mod.rs
src/cli_handler/file_input/: mod.rs
src/cli_handler/llm/: chat.rs  code.rs  mod.rs
src/cli_handler/ratatui_app/: event_handler.rs  input.rs  mod.rs  state_handling.rs  tool_list_popover.rs
src/provider/: error.rs  gemini.rs  mod.rs
src/provider/api_key_manager/: mod.rs
